# deep-learning-intro

./: README.md  classificacao_roupas.ipynb  modelo.h5  modelo.keras  pyproject.toml
